--- a/index.html
+++ b/index.html
@@ -35,14 +35,13 @@
         <div class="background-2"></div>
       </div>
       <div class="text-container" id="txt" data-aos="fade-up" data-aos-delay="400">
-        <h2>Hello, <span class="main-text"> I'm Hamza</span></h2>
+        <h2> Hey! I'm <span class="main-text"> Muhammad Hamza!</span></h2>
         <p>
-          I'm <span class="sec-text">Front-end Developer.</span> Aspiring be full stack developer.
+          I'm <span class="sec-text">Passionate Front-end Developer.</span> 
         </p>
-        <a href="./img/resume2.png" target="_blank" class="resume-btn">Resume</a>
       </div>
       <div class="img-container" data-aos="fade-left" data-aos-delay="500">
-        <img src="/img/undraw_web_developer_p3e5.png" alt="porfolio picture" />
+        <img src="./img/main.jpg" alt="porfolio picture" />
       </div>
     </header>
     
@@ -52,7 +51,10 @@
       </div>
       <div class="wrap-container">
         <div class="icons">
-          <i class="fab fa-html5"></i>
+          <div>
+             <h4>Html</h4>
+            <i class="fab fa-html5"></i>
+          </div>
           <i class="fab fa-css3-alt"></i>
           <i class="fab fa-sass"></i>
           <i class="fab fa-js"></i>
