--- a/index.html
+++ b/index.html
@@ -51,16 +51,22 @@
       </div>
       <div class="wrap-container">
         <div class="icons">
-          <div>
-             <h4>Html</h4>
-            <i class="fab fa-html5"></i>
-          </div>
-          <i class="fab fa-css3-alt"></i>
-          <i class="fab fa-sass"></i>
-          <i class="fab fa-js"></i>
-          <i class="fab fa-react"></i>
-          <i class="fab fa-bootstrap"></i>
-          <i class="fab fa-github"></i>
+              <h3>HTML</h3>
+              <h3>CSS</h3>
+              <h3>JavaScript</h3>
+              <h3>React</h3>
+              <h3>BootStrap</h3>
+              <h3>React Router</h3>
+              <h3>Material-ui</h3>
+              <h3>Scss</h3>
+              <h3>Node</h3>
+              <h3>Express</h3>
+              <h3>Git</h3>
+              <h3>GitHub</h3>
+              <h3>Json</h3>
+              <h3>MongoDb</h3>
+              <h3>Material-ui</h3>
+              <h3>Rest Api</h3>
         </div>
       </div>
     </section>
@@ -72,10 +78,11 @@
         <div class="heading">
           <h4>Front-End Dev</h4>
           <p>
-            Hello, I am Muhammad Hamza. I am front-end web developer and
-            aspiring be full stack developer. Current front-end developer living
-            in New York City. I like to spend my time building project and
-            learning more about HTML, CSS, JavaScript and React.
+              I am a Software Engineer with 2 years experience based in New York
+            City, NY. I am proficient in Front-End development. I have extensive
+            knowledge in HTML, CSS, Javascript,React, Next, Node.Js, MongoDB,
+            and Express. As a software engineer, I help businesses create an
+            online presence through fully responsive websites.
           </p>
         </div>
         <div class="about-img" data-aos="fade-down-left">
