adding new skills

--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
         <h1>Skills</h1>
       </div>
       <div class="wrap-container">
-        <div class="icons">
-              <h3>HTML</h3>
+        <div class="skills-section">
+
+          <div class="front">
+             <h3>HTML</h3>
               <h3>CSS</h3>
               <h3>JavaScript</h3>
               <h3>React</h3>
@@ -59,15 +61,20 @@
               <h3>React Router</h3>
               <h3>Material-ui</h3>
               <h3>Scss</h3>
-              <h3>Node</h3>
+              
+          </div>
+          <div class="backend">
+            <h3>Node</h3>
               <h3>Express</h3>
               <h3>Git</h3>
               <h3>GitHub</h3>
               <h3>Json</h3>
               <h3>MongoDb</h3>
-              <h3>Material-ui</h3>
+               <h3>EJS</h3>
               <h3>Rest Api</h3>
+          </div>
         </div>
+
       </div>
     </section>
     <section class="about-me" id="about">
