--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
         <div class="skills-section">
 
           <div class="front">
+            <h1>Front-End Skills</h1>
              <h3>HTML</h3>
               <h3>CSS</h3>
               <h3>JavaScript</h3>
@@ -64,6 +65,7 @@
               
           </div>
           <div class="backend">
+            <h2>Backend Skills</h2>
             <h3>Node</h3>
               <h3>Express</h3>
               <h3>Git</h3>
