--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
       type="image/x-icon"
       />
       <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+
       <link rel="stylesheet" href="/style.css" />
       <title><Hamza/></title>
     </head>
@@ -49,11 +51,11 @@
       <div class="head">
         <h1>Skills</h1>
       </div>
-      <div class="wrap-container">
-        <div class="skills-section">
+      <div class="container">
+        <div class="row">
 
-          <div class="front">
-            <h1>Front-End Skills</h1>
+          <div class="col-md-6">
+            <h2>Front-End Skills</h2>
              <h3>HTML</h3>
               <h3>CSS</h3>
               <h3>JavaScript</h3>
@@ -64,7 +66,7 @@
               <h3>Scss</h3>
               
           </div>
-          <div class="backend">
+          <div class="col-md-6">
             <h2>Backend Skills</h2>
             <h3>Node</h3>
               <h3>Express</h3>
@@ -239,6 +241,8 @@
       src="https://kit.fontawesome.com/3e7a1ed015.js"
       crossorigin="anonymous"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
+
     <script src="/app.js"></script>
   </body>
 </html>
